feat: update dependencies and enhance test selection logic